# ok_scheduler

./: LICENSE  MANIFEST.in  README.md  benchmark.py  generator_example.py  requirements.txt  setup.cfg  solve.py  test.py  test_genetic.py
instances/: example_instance.txt  m1410n600p20.txt  w112.txt  w1410.txt  w997.txt
scheduler/: __init__.py  dev_generator.py  exceptions.py  generator.py  instance.py  objects.py  problem.py  tools.py  utils.py
scheduler/algorithms/: basic_heuristic.py  basic_heuristic_2.py  basic_heuristic_3.py  brute_force_iterative.py  brute_force_recursive.py  eryk_heuristic.py  genetic.py  genetic_crossing.py  greedy.py  jakub_genetic.py  lpt.py
scheduler/scripts/: __init__.py  analyze.py  solve.py
solutions/: eryk_genetic-m10n200-1.toml  eryk_genetic-m25n198-1.toml  eryk_genetic-m50n1000-1.toml  eryk_genetic-m50n101-1.toml  eryk_genetic-m50n200-1.toml  jakub_genetic-m10n200-1.toml  jakub_genetic-m25n198-1.toml  jakub_genetic-m50n1000-1.toml  jakub_genetic-m50n101-1.toml  jakub_genetic-m50n200-1.toml
tests/: test.py
